# intern

./: .env.example  .gitignore  INSTALLATION.md  README.md  alembic.ini  architecture.md  docker-compose.postgres.external.yml  docker-compose.postgres.yml  docker-compose.qdrant.yml  final_test.py  hatchet_client.py  pyproject.toml  run_worker.py  start_server.sh  start_server_multiworker.sh  todo.md
.deepeval/: .deepeval-cache.json  .deepeval_telemetry.txt  .latest_test_run.json
.trae/skills/check-web-design/: SKILL.md
agent_rag/: __init__.py
agent_rag/agent/: __init__.py  base.py  chat_agent.py  session_memory_agent.py  step.py
agent_rag/agent/deep_research/: __init__.py  context_expansion.py  orchestrator.py  packets.py  (+11 more)
agent_rag/api/: __init__.py  main.py
agent_rag/citation/: __init__.py  accumulator.py  processor.py  utils.py
agent_rag/core/: __init__.py  callbacks.py  config.py  database.py  env_config.py  exceptions.py  external_database_config.py  external_database_connector.py  memory_extractor.py  memory_store.py  models.py  personality.py  session_manager.py  session_memory_models.py
agent_rag/document_index/: __init__.py  interface.py
agent_rag/embedding/: __init__.py  interface.py
agent_rag/ingestion/: FIX_CRITICAL_ISSUES.md  dedup.py  models.py  storage.py  text_normalize.py
agent_rag/llm/: __init__.py  interface.py
agent_rag/retrieval/: __init__.py  pipeline.py  ranking.py
agent_rag/scripts/: __init__.py  deploy_vespa.py  init_all.py  init_db.py  migrate.py
agent_rag/text_to_sql/: __init__.py  config.py  external_database_adapter.py  external_db_scanner.py  intent_analyzer.py  keyword_manager.py  models.py  schema_store.py  sql_generator.py
agent_rag/tools/: __init__.py  interface.py  registry.py  runner.py
agent_rag/utils/: __init__.py  concurrency.py  llm_logging.py  logger.py  timing.py
alembic/: env.py
alembic/versions/: 20241228_0001_001_initial_ingestion_tables.py
data/db_discoveries/: external_db.json
data/schema_store/: columns.pkl  schemas.pkl  tables.pkl
data/uploaded_files/: 字节跳动公司介绍.txt  机器学习入门.txt  用户偏好说明.txt
docs/: GUIDELINE.md  README.md  agent_rag_architecture.drawio  agent_rag_flow.drawio  api-reference.md  chunking.md  configuration.md  deep-research.md  getting-started.md  indexing.md  ingestion-indexing-design.md  parsing.md  vespa-integration.md
qdrant_storage/: raft_state.json
scripts/: eval_report.py  init_messages_table.sql  test_performance.py
tests/: __init__.py  conftest.py  test_agent.py  test_api_fast_path.py  test_citation.py  test_core.py  test_env_config.py  test_ingestion.py  test_retrieval.py  test_vespa_enhanced.py
tests/evals/: test_answer_relevancy.py  test_retrieval.py
(+279 files in other folders)
